@@ -78,3 +78,38 @@ fn checked_rem_bit_uint(b: &mut Bencher) {
 
     b.iter(|| n.checked_rem(2));
 }
+
+#[bench]
+fn checked_neg_bit_int(b: &mut Bencher) {
+    let n = BitI32::<31>::new(5).unwrap();
+
+    b.iter(|| n.checked_neg());
+}
+
+#[bench]
+fn checked_neg_bit_uint(b: &mut Bencher) {
+    let n = BitU32::<31>::MIN;
+
+    b.iter(|| n.checked_neg());
+}
+
+#[bench]
+fn checked_abs(b: &mut Bencher) {
+    let n = BitI32::<31>::new(-5).unwrap();
+
+    b.iter(|| n.checked_abs());
+}
+
+#[bench]
+fn checked_pow_bit_int(b: &mut Bencher) {
+    let n = BitI32::<31>::new(8).unwrap();
+
+    b.iter(|| n.checked_pow(2));
+}
+
+#[bench]
+fn checked_pow_bit_uint(b: &mut Bencher) {
+    let n = BitU32::<31>::new(2).unwrap();
+
+    b.iter(|| n.checked_pow(5));
+}
